--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "goog-webfont-dl",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "A utility to download google webfonts to your local machine",
   "bin": {
     "goog-webfont-dl": "./index.js"
   },
   "dependencies": {
-    "request": "~2.36.0",
-    "css": "~2.0.0",
-    "commander": "~2.2.0",
+    "request": "~2.53.0",
+    "css": "~2.1.0",
+    "commander": "~2.6.0",
     "async": "~0.9.0",
-    "lodash": "latest"
+    "lodash": "~3.1.0"
   },
   "repository": {
     "type": "git",
