--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goog-webfont-dl",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A utility to download google webfonts to your local machine",
   "bin": {
     "goog-webfont-dl": "./index.js"
@@ -10,7 +10,8 @@
     "css": "~2.1.0",
     "commander": "~2.6.0",
     "async": "~0.9.0",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "mkdirp": "~0.5.1"
   },
   "repository": {
     "type": "git",
