--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.4.1",
   "description": "A utility to download google webfonts to your local machine",
   "bin": {
-    "goog-webfont-dl": "./index.js"
+    "goog-webfont-dl": "./cli.js"
   },
+  "main": "./index.js",
   "dependencies": {
     "request": "~2.53.0",
     "css": "~2.1.0",
@@ -32,5 +33,8 @@
   },
   "engines": {
     "node": ">=0.12"
+  },
+  "devDependencies": {
+    "eslint": "^3.9.1"
   }
 }
