--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "css": "~2.1.0",
     "commander": "~2.6.0",
     "lodash": "~3.1.0",
-    "mkdirp": "~0.5.1"
+    "mkdirp": "~0.5.1",
+    "bluebird": "~3.4.6"
   },
   "repository": {
     "type": "git",
